fix: #3045 add dbgap to studies column, fix pagination, add filter studies name (#3048)

--- a/src/store/graphql/studies/tableColumn.scss
+++ b/src/store/graphql/studies/tableColumn.scss
@@ -1,7 +1,6 @@
 @import 'src/style/themes/default/colors';
 
 .story-table-code {
-    padding-left: 7px;
     color: $primary-color;
     text-decoration: underline;
 }
